selfhost/test/typechecker/indexing/error_indexing_array_nullable.out
Error at %FILE_NAME%:2:1
Unsupported indexing operation
  |  arr[0]
     ^
Type 'Int[]?' is not indexable
