selfhost/test/typechecker/indexing/error_indexing_array_nullable.abra
val arr: Int[]? = [1, 2 ,3]
arr[0]